fixed HOME path

--- a/notebook.conf
+++ b/notebook.conf
@@ -8,11 +8,17 @@ stop on runlevel [016]
 
 console log
 
-setuid vagrant
-setgid vagrant
+# XXX Change to your uid
+setuid wshen0123
+setgid wshen0123
 
+# Used for IPython to find pyspark
+# XXX Change to your PySpark_PATH
 env PATH=/bin:/sbin:/usr/bin:/usr/sbin:/usr/local/bin:/usr/local/sbin:/usr/local/bin/spark-1.4.1-bin-hadoop2.6/bin
-env HOME=/home/wshen0123/Public/
 
+# Used for IPython to find $HOME/.ipython/
+# XXX Change to your HOME
+env HOME=/home/wshen0123/
 
+# XXX Change to your spark_notebook.py path
 exec python /home/wshen0123/Public/spark_notebook.py
