modified XXX with examples and REAME

--- a/notebook.conf
+++ b/notebook.conf
@@ -8,17 +8,23 @@ stop on runlevel [016]
 
 console log
 
-# XXX Change to your uid
-setuid wshen0123
-setgid wshen0123
+# XXX Change to your uid, you can create a separate user for IPython Notebook
+# setuid ipython
+# setgid ipython
+setuid <your-uid>
+setgid <your-gid>
 
 # Used for IPython to find pyspark
 # XXX Change to your PySpark_PATH
-env PATH=/bin:/sbin:/usr/bin:/usr/sbin:/usr/local/bin:/usr/local/sbin:/usr/local/bin/spark-1.4.1-bin-hadoop2.6/bin
+# env PATH=/bin:/sbin:/usr/bin:/usr/sbin:/usr/local/bin:/usr/local/sbin:/usr/local/bin/spark-1.4.1-hadoop2.6/
+env PATH=/bin:/sbin:/usr/bin:/usr/sbin:/usr/local/bin:/usr/local/sbin:<your-spark-path>
 
 # Used for IPython to find $HOME/.ipython/
-# XXX Change to your HOME
-env HOME=/home/wshen0123/
+# XXX Change to your HOME, this is used by IPython to locate profile, e.g.
+# /home/ipython/.ipython/profile_pyspark
+# env HOME=/home/ipython
+env HOME=<your-home-path>
 
 # XXX Change to your spark_notebook.py path
-exec python /home/wshen0123/Public/spark_notebook.py
+# exec python /home/ipython/spark_notebook.py
+exec python <path-to-spark_notebook.py>
